[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NREL-emerge"
dynamic = ["version"]
description = "Emerging technologies Management and Risk evaluation on distributions Grid Evolution"
readme = "README.md"
license = ""
requires-python = ">=3.10"
authors = [
    { name = "Kapil Duwadi", email = "kapil.duwadi@nrel.gov" },
]
keywords = [
    "DER",
    "Distribution",
    "System",
    "analysis",
    "impact",
    "management",
    "risk",
    "technologies",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click",
    "dash",
    "fastapi",
    "jinja2",
    "json5",
    "matplotlib",
    "networkx",
    "OpenDSSDirect.py",
    "pandas",
    "polars",
    "pyarrow",
    "pydantic",
    "pytest",
    "pyyaml",
    "tinydb",
    "uvicorn[standard]",
    "sqlmodel"
]

[project.optional-dependencies]
doc = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]

[project.scripts]
emerge = "emerge.cli.cli:cli"

[project.urls]
Homepage = "https://github.com/NREL/EMeRGE"

[tool.hatch.version]
path = "emerge/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/emerge",
]

[tool.hatch.build.targets.wheel]
packages = [
    "emerge"
]
